# yast-add-on-creator

./: .cvsignore  .gitignore  .travis.yml  MAINTAINER  README.md  RPMNAME  yast2-add-on-creator.spec.in
agents/: Makefile.am  ag_packages_descr  ag_pattern  content.scr  packages_descr.scr  sysconfig.add-on-creator
data/: Makefile.am
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-add-on-creator.changes  yast2-add-on-creator.spec
src/: AddOnCreator.ycp  AddOnCreator2.pm  Makefile.am  add-on-creator.desktop  add-on-creator.ycp  add-on-creator_auto.ycp  add-on-creator_proposal.ycp  complex.ycp  dialogs.ycp  helps.ycp  patterns.ycp  template.prod  wizards.ycp
src/clients/: add-on-creator.rb
src/desktop/: add-on-creator.desktop
src/fillup/: sysconfig.add-on-creator
src/include/add-on-creator/: complex.rb  dialogs.rb  helps.rb  helps.ycp  patterns.rb  patterns.ycp  wizards.rb  wizards.ycp
src/modules/: AddOnCreator.rb  PackagesDescr.pm
src/scrconf/: cfg_add-on-creator.scr  pattern.scr
src/servers_non_y2/: ag_pattern
testsuite/tests/: AddOnCreator.out  AddOnCreator.rb  AddOnCreator.ycp
